BAP-1041: JS Load Time Optimization  - Add dump command, Route generator

--- a/Resources/config/assets.yml
+++ b/Resources/config/assets.yml
@@ -7,4 +7,5 @@ js:
       - '@OroWindowsBundle/Resources/public/js/collections/state.js'
       - '@OroWindowsBundle/Resources/public/js/views/dialog.js'
 css:
-  - 'bundles/orowindows/css/jquery.dialog.extended.css'
+  'windows':
+      - 'bundles/orowindows/css/jquery.dialog.extended.css'
